--- a/src/product.jade
+++ b/src/product.jade
@@ -46,26 +46,26 @@ html(lang="ru")
 
                                     div
                                         input(type="radio", name="color", value="brown", id="brown",checked="")
-                                        .price 599.00 UAH
-                                        label(for="brown")
+                                        //.price 599.00 UAH
+                                        label(for="brown", style="background: #46311b")
 
-                                            img(src="img/content/color1.jpg")
+                                            //img(src="img/content/color1.jpg")
 
 
                                     div
                                         input(type="radio", name="color", value="black",id="black")
-                                        .price 699.00 UAH
-                                        label(for="black")
-                                            img(src="img/content/color2.jpg")
+                                        //.price 699.00 UAH
+                                        label(for="black", style="background: #000")
+                                            //img(src="img/content/color2.jpg")
 
                                     div
                                         input(type="radio", name="color", value="brown2" id="brown2")
-                                        .price 499.00 UAH
-                                        label(for="brown2")
-                                            img(src="img/content/color3.jpg")
+                                        //.price 499.00 UAH
+                                        label(for="brown2", style="background: #975f23")
+                                            //img(src="img/content/color3.jpg")
 
 
-
+                                .price 499.00 UAH
                                 button(type="submit") Добавить в корзину
 
 
