fixed color cart

--- a/src/cart.jade
+++ b/src/cart.jade
@@ -26,7 +26,7 @@ html(lang="ru")
                                     .attr
                                         .color
                                             span.attr_name Цвет:
-                                            img(src="img/content/color1.jpg")
+                                            span.color_bg(style="background: #975f23")
                                         .counts Количество 1 шт.
 
                                     .price 499.00 UAH
@@ -47,7 +47,7 @@ html(lang="ru")
                                     .attr
                                         .color
                                             span.attr_name Цвет:
-                                            img(src="img/content/color2.jpg")
+                                            span.color_bg(style="background: #975f23")
                                         .counts Количество 1 шт.
 
                                     .price 499.00 UAH
