--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -1287,6 +1287,11 @@ form.payment
                 font-size: 20px
                 line-height: 1em
                 margin-right: 8px
+              .color_bg
+                width: 20px
+                height: 20px
+                display: inline-block
+                vertical-align: middle
               img
                 display: inline-block
                 vertical-align: middle
