fixed delete cart

--- a/src/cart.jade
+++ b/src/cart.jade
@@ -31,7 +31,7 @@ html(lang="ru")
 
                                     .price 499.00 UAH
                                     .delete
-                                        a(href="#")
+                                        button
                                             img(src="img/icons/delete.png")
                                             span Удалить
 
@@ -52,7 +52,7 @@ html(lang="ru")
 
                                     .price 499.00 UAH
                                     .delete
-                                        a(href="#")
+                                        button
                                             img(src="img/icons/delete.png")
                                             span Удалить
                             .control-pannel
