--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -1313,9 +1313,14 @@ form.payment
             width: 127px
             padding-top: 30px
             text-align: center
-            a
+            button
+              border: 0
+              padding: 0
+              display: inline-block
               &:hover
                 text-decoration: none
+                background: none
+
                 span
                   color: #e3cc0a
 
@@ -1489,7 +1494,7 @@ form.payment
 body.client-ie,
 body.client-safari
   .cart_page form .products .product-item > div.delete
-    a
+    button
       position: relative
       padding-top: 33px
       display: block
@@ -1888,7 +1893,7 @@ body.client-moz
               width: 280px
               padding: 0
               text-align: center
-              a
+              button
                 font-size: 20px
 
 
@@ -1900,7 +1905,7 @@ body.client-moz
             &.price
               font-size: 20px
             &.delete
-              a
+              button
                 background: #ffe400
                 padding: 10px 0
                 width: 280px
@@ -1987,7 +1992,7 @@ body.client-moz
   body.client-ie,
   body.client-safari
     .cart_page form .products .product-item > div.delete
-      a
+      button
 
         &:hover:after
           background: url("../img/icons/delete2.png") no-repeat top center
@@ -2061,7 +2066,7 @@ body.client-moz
             &.item-name,&.attr,&.price,&.delete
               width: auto
             &.item-name,&.attr
-              a,.color .attr_name
+              button,.color .attr_name
                 font-size: 18px
 
       button
