--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -1251,11 +1251,11 @@ form.payment
               padding: 0 15px
               height: 100px
               overflow: hidden
+              text-align: center
               img
                   height: 100px
-                  position: absolute
-                  left: 15px
-                  top: 0
+
+
 
           &.item-name
               padding: 25px 15px 0 15px
@@ -1609,7 +1609,7 @@ body.client-moz
               padding: 0
               width: 160px
               img
-                left: 0
+                //left: 0
 
 
             &.item-name
@@ -1730,8 +1730,10 @@ body.client-moz
                 vertical-align: middle
                 img
                   height: 60px
-                  top: 50%
-                  margin-top: -30px
+                  margin-top: 20px
+                  //top: 50%
+                  //margin-top: -30px
+                  //position: absolute
 
               &.item-name
 
@@ -1885,7 +1887,8 @@ body.client-moz
               width: 160px
               img
                 height: 100px
-                margin-top: -50px
+                margin-top: 0
+                //margin-top: -50px
 
 
 
@@ -1895,6 +1898,7 @@ body.client-moz
               text-align: center
               button
                 font-size: 20px
+                margin: auto
 
 
             &.attr
