--- a/src/cart.jade
+++ b/src/cart.jade
@@ -57,7 +57,8 @@ html(lang="ru")
                                             span Удалить
                             .control-pannel
                                 .total_price Всего: 898.00 UAH
-                                button(type="submit") Оформить заказ
+                                //button(type="submit") Оформить заказ
+                                a(href="#") Оформить заказ
 
 
 
