--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -1042,6 +1042,7 @@ form.payment
     vertical-align: top
     width: 400px
     .big-images
+      margin-bottom: 40px
       img
         width: 400px
         height: 350px
