--- a/src/contacts.jade
+++ b/src/contacts.jade
@@ -22,7 +22,11 @@ html(lang="ru")
                             div
                                 textarea( placeholder="Сообщение:", name="message",data-validate="name")
                                 span.error Поле обязательное для заполнения
-                            button(type="submit") Отправить
+                            //button(type="submit") Отправить
+                            .btn.submit Отправить
+
+
+
                         ul.contact
                             li Skype:
                                 a(href="skype:Symonenko.shop?chat" title="Symonenko.shop") Symonenko.shop
