--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -884,7 +884,8 @@ footer
           display: block
 
 
-    button[type="submit"]
+    button[type="submit"],  .btn.submit
+        cursor: pointer
         margin: auto
         padding: 9px 20px 14px
         border: 1px solid #000000
@@ -939,14 +940,14 @@ form.payment
     clear: both
     text-align: left
 
-  button[type="submit"]
+  button[type="submit"], .btn.submit
     margin: auto
     padding: 9px 20px 14px
     border: 1px solid #000000
     background: none
     display: inline-block
     font-size: 18px
-
+    cursor: pointer
     box-sizing: border-box
     line-height: 1em
     transition: all 0.35s
