--- a/src/payment.jade
+++ b/src/payment.jade
@@ -77,7 +77,8 @@ html(lang="ru")
                             div
                                 input(type="email", placeholder="Email:", name="email", data-validate="email")
                                 span.error Поле обязательное для заполнения
-                        button(type="submit")  Отправить
+                        //button(type="submit")  Отправить
+                        .btn.submit  Отправить
 
 
 
