fixed img height

--- a/src/category.jade
+++ b/src/category.jade
@@ -42,13 +42,14 @@ html(lang="ru")
                         .category
                             a(href="/list_products.html")
                                 .images.img-holder
-                                    img(src="img/content/img2.jpg" alt="Товар 2")
+                                    img(src="img/content/slider_price2.png" alt="Товар 2")
                                 .category_name Рюкзаки
 
                         .category
                             a(href="/list_products.html")
+
                                 .images.img-holder
-                                    img(src="img/content/img3.jpg" alt="Товар 3")
+                                    img(src="img/content/blog.png" alt="Товар 3")
                                 .category_name Рюкзаки
 
 
