--- a/src/index.jade
+++ b/src/index.jade
@@ -41,13 +41,16 @@ html(lang="ru")
                             .product
                                 a(href="/product.html")
                                     .images
-                                        img(src="img/content/img4.jpg" alt="Товар 4")
+                                        img(src="img/content/blog.png" alt="Товар 4")
                             .product
                                 a(href="/product.html")
                                     .images
-                                        img(src="img/content/img5.jpg" alt="Товар 5")
+                                        img(src="img/content/slider_price2.png" alt="Товар 5")
 
-
+                            .product
+                                a(href="/product.html")
+                                    .images
+                                        img(src="img/content/slider_price2.png" alt="Товар 5")
 
 
 
