--- a/src/list_products.jade
+++ b/src/list_products.jade
@@ -59,13 +59,13 @@ html(lang="ru")
                         .product
                             a(href="/product.html")
                                 .images.img-holder
-                                    img(src="img/content/img5.jpg" alt="Товар 5")
+                                    img(src="img/content/slider_price2.png" alt="Товар 5")
                                 .product_name Кошелек кожаный Symonen.ko
                                 .price 390,00 UAH
                         .product
                             a(href="/product.html")
                                 .images.img-holder
-                                    img(src="img/content/img4.jpg" alt="Товар 4")
+                                    img(src="img/content/blog.png" alt="Товар 4")
                                 .product_name Кошелек кожаный Symonen.ko
                                 .price 390,00 UAH
 
