fixed img height mobile

--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -1669,16 +1669,27 @@ body.client-moz
     .category
       width: 280px
       height: 325px
+      a
+        height: 100%
   .list_products
     .product
       width: 280px
       margin-bottom: 50px
+
       a
+        height: 100%
         .images
           height: 325px
 
   .pagination
     margin-bottom: 70px
+  .popular_product
+    .products
+      .product
+        width: 280px
+        height: 325px
+        a
+            height: 100%
 
 
 
