--- a/src/footer.jade
+++ b/src/footer.jade
@@ -13,11 +13,11 @@ footer
             .social
                 h3 Социальные сети
                 li.vk
-                    a(href="#")
+                    a(href="#", target="_blank")
                 li.facebook
-                    a(href="#")
+                    a(href="#", target="_blank")
                 li.twitter
-                    a(href="#")
+                    a(href="#", target="_blank")
 
         div.adress
             h3 Где мы находимся
