--- a/src/header.jade
+++ b/src/header.jade
@@ -28,11 +28,11 @@ header
                                     a(href="/contacts.html") Контакты
                         ul.social
                             li.vk
-                                a(href="#")
+                                a(href="#", target="_blank")
                             li.facebook
-                                a(href="#")
+                                a(href="#", target="_blank")
                             li.twitter
-                                a(href="#")
+                                a(href="#", target="_blank")
                         ul.lang
                             li.ua
                                 a(href="#") ua
@@ -49,11 +49,11 @@ header
 
                 ul.social
                     li.vk
-                        a(href="#")
+                        a(href="#", target="_blank")
                     li.facebook
-                        a(href="#")
+                        a(href="#", target="_blank")
                     li.twitter
-                        a(href="#")
+                        a(href="#", target="_blank")
                 ul.lang
                     li.ua
                         a(href="#") ua
