--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -1403,7 +1403,7 @@ form.payment
 
 
 .blog
-  margin-bottom: 50px
+  margin-bottom: 55px
   h3
     line-height: 1em
     color:  #191919
@@ -1416,6 +1416,9 @@ form.payment
   .item-arcticle
     margin-bottom: 80px
     clear: both
+    &:last-child
+      margin-bottom: 0
+
     .image-left
       position: relative
       vertical-align: middle
