fixed slider color

--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -1063,8 +1063,11 @@ form.payment
 
 .productfull
   margin: 105px auto 160px
+
+
   .image
     display: inline-block
+    //display: none
     margin-right: 75px
     vertical-align: top
     width: 400px
