--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -1066,11 +1066,13 @@ form.payment
 
 
   .image
-    display: inline-block
-    //display: none
+    //display: inline-block
+    display: none
     margin-right: 75px
     vertical-align: top
     width: 400px
+    &:first-child
+      display: inline-block
     .big-images
       margin-bottom: 40px
       img
