--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -1064,15 +1064,13 @@ form.payment
 .productfull
   margin: 105px auto 160px
 
-
   .image
-    //display: inline-block
-    display: none
+    display: inline-block
+    //display: none
     margin-right: 75px
     vertical-align: top
     width: 400px
-    &:first-child
-      display: inline-block
+
     .big-images
       margin-bottom: 40px
       img
