--- a/src/product.jade
+++ b/src/product.jade
@@ -9,77 +9,78 @@ html(lang="ru")
                 .wrap
 
                     .productfull
-                        .image.img-holder(data-cat="brown2")
-                            .big-images#links
+                        .image
+                            .img-holder.img-slider(data-cat="brown2")
+                                .big-images#links1
 
-                                    a(href="img/content/60-0.jpg")
-                                        img(src="img/content/60-0.jpg", alt="Кожанный кошелек")
+                                        a(href="img/content/60-0.jpg")
+                                            img(src="img/content/60-0.jpg", alt="Кожанный кошелек")
 
-                                    a(href="img/content/60-0.jpg")
-                                        img(src="img/content/60-0.jpg", alt="Кожанный кошелек")
+                                        a(href="img/content/60-0.jpg")
+                                            img(src="img/content/60-0.jpg", alt="Кожанный кошелек")
 
 
-                                    a(href="img/content/60-0.jpg")
-                                        img(src="img/content/60-0.jpg", alt="Кожанный кошелек")
-                                    a(href="img/content/60-0.jpg")
-                                        img(src="img/content/60-0.jpg", alt="Кожанный кошелек")
-                            .thumbs
+                                        a(href="img/content/60-0.jpg")
+                                            img(src="img/content/60-0.jpg", alt="Кожанный кошелек")
+                                        a(href="img/content/60-0.jpg")
+                                            img(src="img/content/60-0.jpg", alt="Кожанный кошелек")
+                                .thumbs
 
-                                div
-                                    img(src="img/content/related1.jpg", alt="Товар 1")
-                                div
-                                    img(src="img/content/related2.jpg", alt="Товар 1")
-                                div
-                                    img(src="img/content/related3.jpg", alt="Товар 1")
-                                div
-                                    img(src="img/content/related3.jpg", alt="Товар 1")
-                        .image.img-holder(data-cat="black")
-                            .big-images#links
+                                    div
+                                        img(src="img/content/related1.jpg", alt="Товар 1")
+                                    div
+                                        img(src="img/content/related2.jpg", alt="Товар 1")
+                                    div
+                                        img(src="img/content/related3.jpg", alt="Товар 1")
+                                    div
+                                        img(src="img/content/related3.jpg", alt="Товар 1")
+                            .img-holder.img-slider(data-cat="black")
+                                .big-images#links2
 
-                                a(href="img/content/530-0.jpg")
-                                    img(src="img/content/530-0.jpg", alt="Кожанный кошелек")
+                                    a(href="img/content/530-0.jpg")
+                                        img(src="img/content/530-0.jpg", alt="Кожанный кошелек")
 
-                                a(href="img/content/530-0.jpg")
-                                    img(src="img/content/530-0.jpg", alt="Кожанный кошелек")
+                                    a(href="img/content/530-0.jpg")
+                                        img(src="img/content/530-0.jpg", alt="Кожанный кошелек")
 
-                                a(href="img/content/530-0.jpg")
-                                    img(src="img/content/530-0.jpg", alt="Кожанный кошелек")
-                                a(href="img/content/530-0.jpg")
-                                    img(src="img/content/530-0.jpg", alt="Кожанный кошелек")
-                            .thumbs
+                                    a(href="img/content/530-0.jpg")
+                                        img(src="img/content/530-0.jpg", alt="Кожанный кошелек")
+                                    a(href="img/content/530-0.jpg")
+                                        img(src="img/content/530-0.jpg", alt="Кожанный кошелек")
+                                .thumbs
 
-                                div
-                                    img(src="img/content/related1.jpg", alt="Товар 1")
-                                div
-                                    img(src="img/content/related2.jpg", alt="Товар 1")
-                                div
-                                    img(src="img/content/related3.jpg", alt="Товар 1")
-                                div
-                                    img(src="img/content/related3.jpg", alt="Товар 1")
+                                    div
+                                        img(src="img/content/related1.jpg", alt="Товар 1")
+                                    div
+                                        img(src="img/content/related2.jpg", alt="Товар 1")
+                                    div
+                                        img(src="img/content/related3.jpg", alt="Товар 1")
+                                    div
+                                        img(src="img/content/related3.jpg", alt="Товар 1")
 
-                        .image.img-holder(data-cat="brown")
-                            .big-images#links
+                            .img-holder.img-slider(data-cat="brown")
+                                .big-images#links3
 
-                                a(href="img/content/535-0.jpg")
-                                    img(src="img/content/535-0.jpg", alt="Кожанный кошелек")
+                                    a(href="img/content/535-0.jpg")
+                                        img(src="img/content/535-0.jpg", alt="Кожанный кошелек")
 
-                                a(href="img/content/535-0.jpg")
-                                    img(src="img/content/535-0.jpg", alt="Кожанный кошелек")
+                                    a(href="img/content/535-0.jpg")
+                                        img(src="img/content/535-0.jpg", alt="Кожанный кошелек")
 
-                                a(href="img/content/535-0.jpg")
-                                    img(src="img/content/535-0.jpg", alt="Кожанный кошелек")
-                                a(href="img/content/535-0.jpg")
-                                    img(src="img/content/535-0.jpg", alt="Кожанный кошелек")
-                            .thumbs
+                                    a(href="img/content/535-0.jpg")
+                                        img(src="img/content/535-0.jpg", alt="Кожанный кошелек")
+                                    a(href="img/content/535-0.jpg")
+                                        img(src="img/content/535-0.jpg", alt="Кожанный кошелек")
+                                .thumbs
 
-                                div
-                                    img(src="img/content/related1.jpg", alt="Товар 1")
-                                div
-                                    img(src="img/content/related2.jpg", alt="Товар 1")
-                                div
-                                    img(src="img/content/related3.jpg", alt="Товар 1")
-                                div
-                                    img(src="img/content/related3.jpg", alt="Товар 1")
+                                    div
+                                        img(src="img/content/related1.jpg", alt="Товар 1")
+                                    div
+                                        img(src="img/content/related2.jpg", alt="Товар 1")
+                                    div
+                                        img(src="img/content/related3.jpg", alt="Товар 1")
+                                    div
+                                        img(src="img/content/related3.jpg", alt="Товар 1")
 
                         .info
                             form.add_cart
